Update validation package imports and optimize code
Updated import statements in validation packages to use jakarta.validation. Also, optimized and tidied code by removing unnecessary commented lines and white spaces. Other changes include correcting a field name reference, updating import and version details in the pom.xml file, and streamlining several collection stream methods.